--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @charset "shift_jis";
 
 
-/*---------- ÂƒyÂ[ÂƒWÂ‘SÂ‘ÃŒÂ‚ÃŒÂwÂ’Ã¨ ----------*/
+/*---------- ƒy[ƒW‘S‘Ì‚Ìw’è ----------*/
 
 body {
-  font-family: Segoe UI,Verdana, Arial, Helvetica, sans-serif, "Â‚lÂ‚r ÂƒSÂƒVÂƒbÂƒN","Hiragino KaKu Gothic Pro", Osaka;
+  font-family: Segoe UI,Verdana, Arial, Helvetica, sans-serif, "‚l‚r ƒSƒVƒbƒN","Hiragino KaKu Gothic Pro", Osaka;
   margin: 0;
   padding: 0;
   font-size: 15px;
@@ -42,7 +42,7 @@ p {
 
 
 
-/*---------- ÂƒÂÂƒCÂƒÂ“ ----------*/
+/*---------- ƒƒCƒ“ ----------*/
 
 #main {
   margin: 0 auto 0 auto;
@@ -55,7 +55,7 @@ p {
 }
 
 
-/*---------- ÂƒwÂƒbÂƒ_Â[ ----------*/
+/*---------- ƒwƒbƒ_[ ----------*/
 
 #header {
   margin: 0;
@@ -136,7 +136,7 @@ p {
 }
 
 
-/*---------- ÂƒRÂƒÂ“ÂƒeÂƒÂ“Âƒc ----------*/
+/*---------- ƒRƒ“ƒeƒ“ƒc ----------*/
 
 #container {
   margin: 0px;
@@ -147,7 +147,7 @@ p {
 
 
 
-/*---------- ÂƒÂÂƒCÂƒÂ“ÂƒRÂƒÂ“ÂƒeÂƒÂ“Âƒc ----------*/
+/*---------- ƒƒCƒ“ƒRƒ“ƒeƒ“ƒc ----------*/
 
 #contents {
   float: right;
@@ -231,7 +231,7 @@ font-size: 11px;
    text-align:left;
 }
 
-/*---------- ÂƒÂÂƒjÂƒÂ…Â[ ----------*/
+/*---------- ƒƒjƒ…[ ----------*/
 
 #menu {
   float: left;
@@ -278,7 +278,7 @@ li {
 
 
 
-/*---------- ÂƒtÂƒbÂƒ^Â[ ----------*/
+/*---------- ƒtƒbƒ^[ ----------*/
 
 #footer {
   clear: both;
